# rust_os

./: Cargo.toml
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/multitasking/: mod.rs  thread.rs  thread_switch.rs  thread_switch.s
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: heap.rs
